feat: Test main page

--- a/index.mdx
+++ b/index.mdx
@@ -1,16 +1,21 @@
 ---
-title: Introductie
+title: Intro
 description: Start hier met Talentro — vacatures publiceren, campagnes draaien en kandidaten beheren op één plek.
 ---
 
 # Welkom
 
-Talentro helpt je om **vacatures zichtbaar te maken**, **campagnes te draaien** en **kandidaten soepel te beheren**.
-Deze gids is bedoeld voor jou als **gebruiker/klant** — je hoeft geen technische kennis te hebben. In een paar stappen zet je alles klaar en kun je meteen aan de slag.
+<img
+    className="block dark:hidden"
+    src="/images/banner-light.svg"
+    alt="Light banner"
+/>
 
-<Callout>
-    Heb je liever dat wij met je meekijken? Neem contact op via **Help & Support** in het menu.
-</Callout>
+<img
+    className="hidden dark:block"
+    src="/images/banner-dark.svg"
+    alt="Dark banner"
+/>
 
 ---
 
