--- a/index.mdx
+++ b/index.mdx
@@ -1,9 +1,7 @@
 ---
-title: Intro
-description: Start hier met Talentro — vacatures publiceren, campagnes draaien en kandidaten beheren op één plek.
+title: Talentro
+description: Automatisch vacatures en campagnes publiceren op alle kanalen, predictive recruitment, AI optimalizatie tools, strategische automatiseringen, uitgebreide inzichten en meer. Allemaal op één platform.
 ---
-
-# Welkom
 
 <img
     className="block dark:hidden"
@@ -19,101 +17,8 @@ description: Start hier met Talentro — vacatures publiceren, campagnes draaien
 
 ---
 
-## Wat kun je met Talentro?
+## Work in progress
 
-- **Vacatures beheren** — voeg vacatures toe of importeer ze vanuit je ATS.
-- **Automatische campagnes** — promoot vacatures via jouw gekozen kanalen.
-- **Kandidaten in één overzicht** — bekijk reacties, status en communicatie.
-- **Slimme automatiseringen** — bespaar tijd met regels zoals “nieuwe kandidaat → stuur naar ATS”.
-- **Duidelijke inzichten** — dashboards met bereik, reacties en kosten.
+Het platform en deze pagina's zijn nog in ontwikkeling.
 
 ---
-
-## Snel starten (5 stappen)
-
-<Steps>
-    <Step title="Maak je organisatie aan">
-        Vul je organisatienaam in en voeg je logo toe bij **Instellingen → Organisatie**. Dit zorgt voor een herkenbare omgeving voor je team.
-    </Step>
-    <Step title="Nodig je team uit">
-        Ga naar **Instellingen → Team** en verstuur uitnodigingen. Geef rollen zoals <em>Beheerder</em>, <em>Recruiter</em> of <em>Gast</em>.
-    </Step>
-    <Step title="Koppel je kanalen & systemen">
-        Open **Integraties** en koppel je ATS en/of sociale kanalen. Kies wat je wilt synchroniseren (vacatures, kandidaten of beide).
-    </Step>
-    <Step title="Importeer of maak vacatures">
-        Ga naar **Vacatures** om vacatures te importeren of handmatig toe te voegen. Controleer titel, locatie, salaris en beschrijving.
-    </Step>
-    <Step title="Start je eerste campagne">
-        In **Campagnes** kies je de vacature(s), het budget en de periode. Activeer — Talentro verspreidt en optimaliseert automatisch.
-    </Step>
-</Steps>
-
----
-
-## Veelgebruikte acties
-
-<Cards>
-    <Card title="Nieuwe vacature plaatsen" href="/vacatures/nieuw" icon="file-plus">
-        Voeg een vacature toe of werk een bestaande bij. Tip: voeg 3–5 kernpunten toe voor hogere conversie.
-    </Card>
-    <Card title="Campagne starten" href="/campagnes/overzicht" icon="rocket">
-        Kies je doelgroep, budget en looptijd. Bekijk direct de verwachte resultaten.
-    </Card>
-    <Card title="Kandidaten beheren" href="/kandidaten/overzicht" icon="users">
-        Bekijk binnenkomende kandidaten, pas de status aan en stuur berichten of notities.
-    </Card>
-    <Card title="Automatiseringen" href="/automatiseringen/regles" icon="sparkles">
-        Maak regels zoals “nieuwe kandidaat → e-mail bevestiging” of “vacature live → campagne starten”.
-    </Card>
-    <Card title="Integraties" href="/integraties" icon="merge">
-        Koppel je ATS en socials. Je bepaalt zelf wat automatisch wordt gesynchroniseerd.
-    </Card>
-    <Card title="Inzichten & rapportage" href="/inzichten" icon="bar-chart-2">
-        Dashboards met bereik, kosten per kandidaat en kanaalprestatie. Exporteer met één klik.
-    </Card>
-</Cards>
-
----
-
-## Hoe werkt de samenwerking?
-
-- **Alles op één plek**: vacatures, promotie en kandidaten komen samen in één overzicht.
-- **Jij bepaalt de regie**: kies de kanalen, budgetten en automatiseringen die bij jouw werkwijze passen.
-- **Transparante resultaten**: je ziet wat campagnes opleveren en waar je kunt bijsturen.
-
----
-
-## Tips voor snelle winst
-
-- **Gebruik sjablonen** voor vacatureteksten zodat je team consistent werkt.
-- **Stel notificaties in** bij **Instellingen → Meldingen** om direct updates te krijgen.
-- **Automatiseer terugkerend werk** (bijv. automatische doorsturen naar je ATS of het versturen van ontvangstbevestigingen).
-- **Meet wat telt**: bekijk wekelijks de **Inzichten** en optimaliseer je kanalen of teksten.
-
----
-
-## Hulp nodig?
-
-- **Veelgestelde vragen**: zie **Help & Support → FAQ**.
-- **Chat & e-mail**: bereikbaar via **Help & Support** in de app.
-- **Onboarding sessie**: plan een korte walkthrough met ons team.
-
-<Callout type="info">
-    Nieuw bij Talentro? Volg de rondleiding in de app — je ziet stap voor stap waar alles staat.
-</Callout>
-
----
-
-## Wat verandert er voor mijn team?
-
-- Minder losse tools, minder kopieerwerk.
-- Snellere publicatie van vacatures en meer consistentie.
-- Eén kandidaatoverzicht, zelfs als je meerdere kanalen gebruikt.
-
----
-
-## Klaar om te starten?
-
-Ga naar **Vacatures** of **Campagnes** in het menu en zet je eerste campagne aan.
-Je hoeft niets te installeren — alles werkt direct in je browser.
