feat: Edited index

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Talentro
+mode: "custom"
 description: Automatisch vacatures en campagnes publiceren op alle kanalen, predictive recruitment, AI optimalizatie tools, strategische automatiseringen, uitgebreide inzichten en meer. Allemaal op één platform.
 ---
 
