feat: Edited index

--- a/index.mdx
+++ b/index.mdx
@@ -18,8 +18,8 @@ description: Automatisch vacatures en campagnes publiceren op alle kanalen, pred
 
 ---
 
-## Work in progress
+<h2>Work in progress</h2>
 
-Het platform en deze pagina's zijn nog in ontwikkeling.
+<p>Het platform en deze pagina's zijn nog in ontwikkeling.</p>
 
 ---
