feat: Edited index

--- a/index.mdx
+++ b/index.mdx
@@ -18,8 +18,40 @@ description: Automatisch vacatures en campagnes publiceren op alle kanalen, pred
 
 ---
 
-<h2>Work in progress</h2>
+<div style={{ maxWidth: 1280, margin: "0 auto", padding: "24px" }}>
+    <img
+        className="block dark:hidden"
+        src="/images/banner-light.svg"
+        alt="Light banner"
+        style={{
+            width: "100%",
+            height: "auto",
+            borderRadius: 16,
+            boxShadow: "0 10px 30px rgba(0,0,0,0.15)",
+            display: "block"
+        }}
+    />
+    <img
+        className="hidden dark:block"
+        src="/images/banner-dark.svg"
+        alt="Dark banner"
+        style={{
+            width: "100%",
+            height: "auto",
+            borderRadius: 16,
+            boxShadow: "0 10px 30px rgba(0,0,0,0.15)",
+            display: "block"
+        }}
+    />
 
-<p>Het platform en deze pagina's zijn nog in ontwikkeling.</p>
+    <div style={{ textAlign: "center", marginTop: 24 }}>
+        <h1 style={{ margin: 0, fontSize: 32, lineHeight: 1.2 }}>
+            Work in progress
+        </h1>
+        <p style={{ marginTop: 8, opacity: 0.8 }}>
+            We zijn hier nog mee bezig. Kom later terug voor de update.
+        </p>
+    </div>
+</div>
 
 ---
