feat: Edited index

--- a/index.mdx
+++ b/index.mdx
@@ -5,7 +5,7 @@ description: Automatisch vacatures en campagnes publiceren op alle kanalen, pred
 
 ---
 
-<div style={{ maxWidth: 1280, margin: "0 auto", padding: "24px" }}>
+<div style={{ maxWidth: 1280, margin: "0 auto", padding: "100px 24px" }}>
     <img
         className="block dark:hidden"
         src="/images/banner-light.svg"
@@ -38,5 +38,3 @@ description: Automatisch vacatures en campagnes publiceren op alle kanalen, pred
         </p>
     </div>
 </div>
-
----
