feat: Edited index

--- a/index.mdx
+++ b/index.mdx
@@ -29,12 +29,12 @@ description: Automatisch vacatures en campagnes publiceren op alle kanalen, pred
         }}
     />
 
-    <div style={{ textAlign: "center", marginTop: 24 }}>
+    <div style={{ textAlign: "center", marginTop: 48 }}>
         <h1 style={{ margin: 0, fontSize: 32, lineHeight: 1.2 }}>
-            Work in progress
+            Onder constructie
         </h1>
-        <p style={{ marginTop: 8, opacity: 0.8 }}>
-            We zijn hier nog mee bezig. Kom later terug voor de update.
+        <p style={{ marginTop: 24, opacity: 0.6 }}>
+            Deze pagina's en het platform zijn nog onder constructie. Kom later terug voor updates!
         </p>
     </div>
 </div>
